package com.n7ws.back.domain;

public record ScriptDomain(
    String uid,
    String name,
    String path
) {}
