package com.n7ws.back.model;

public record ScriptModel(
    String uid,
    String name,
    String path
) {}
